<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">SadPanda</string>
	<string name="front_page">Front Page</string>
	<string name="login_request">Please log in first</string>
	<string name="login_menu">Log in</string>
	<string name="logout_menu">Log out</string>
	<string name="action_search">Search</string>
	<string name="query_hint">Search Keywords</string>
	<string name="title_activity_overview">OverviewActivity</string>
	<string name="hello_world">Hello world!</string>
	<string name="image_loading_failed">Failed to load image</string>
	<string name="image_not_found">Image was not found</string>
	<string name="image_description">Image for this page</string>
	<string name="refresh_menu">Refresh</string>
	<string name="query_error">Error searching for this query</string>
	<string name="entries">%1$s entries - %2$s</string>
	<string name="show_advanced">Show Advanced Search</string>
	<string name="doujinshi">Doujinshi</string>
	<string name="manga">Manga</string>
	<string name="artist_cg">Artist CG</string>
	<string name="game_cg">Game CG</string>
	<string name="western">Western</string>
	<string name="nonh">Non-H</string>
	<string name="imageset">Image Set</string>
	<string name="cosplay">Cosplay</string>
	<string name="asianporn">Asian Porn</string>
	<string name="misc">Misc</string>
	<string name="star_count">Stars:</string>
	<string name="by_name">By name</string>
	<string name="by_tag">By tags</string>
	<string name="by_desc">By description</string>
	<string name="by_star">By stars</string>
	<string name="by_expunged">By expunged</string>
	<string name="pref_image_scaling">Image Scaling</string>

	<string-array name="star_count">
		<item>0</item>
		<item>1</item>
		<item>2</item>
		<item>3</item>
		<item>4</item>
		<item>5</item>
	</string-array>

	<string name="title_activity_panda_preference">PandaPreferenceActivity</string>
	<string name="pref_image_scaling_default">fit</string>
	<string name="pref_image_scaling_key">pref_image_scaling</string>
	<string name="pref_max_zoom">Max image zoom</string>
	<string name="pref_max_zoom_key">max_image_zoom</string>
	<string name="pref_max_zoom_default">2.5</string>
	<string name="action_cancel">Cancel</string>
	<string name="title_activity_main_activity2">MainActivity2</string>
	<string name="title_section1">Front Page</string>
	<string name="title_section2">Favorites</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="action_example">Example action</string>
	<string name="remove_favorite">Remove from favorites</string>
	<string name="add_to_favorites">Add to favorites</string>
	<string name="add_to">Add to…</string>
	<string name="entry_parsing_failure">Something went wrong trying to open the gallery</string>
	<string name="current_page">page %1$d</string>
	<string name="favorites">Favorites</string>
	<string name="favorites_all">All</string>
	<string name="nothing_here">Nothing here but you and me</string>
	<string name="uploader">Uploader</string>
	<string name="tag">Tag</string>
	<string name="view_entry">View by…</string>
	<string name="favorite_added">Added to favorites</string>
	<string name="favorite_added_failed">Failed to add to favorites</string>
	<string name="favorite_removed_failed">Failed to remove favorite</string>
	<string name="favorite_removed">Removed from favorites</string>
	<string name="show_overview">View thumbnails</string>
	<string name="show_image">Show page</string>
	<string name="open">Open drawer</string>
	<string name="close">Open drawer</string>
	<string name="extras">Extras</string>
	<string name="settings">Settings</string>
	<string name="logout">Logout</string>
	<string name="page_load_failed">Could not load page</string>
	<string name="retry">retry</string>
	<string name="end_of_index">End of the line, baby!</string>

</resources>
